Bug 94661 - [bdw, skl] vk-cts: new test failing
Summary: [bdw, skl] vk-cts: new test failing
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium minor
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-22 17:06 UTC by Dylan Baker
Modified: 2016-03-22 23:17 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Dylan Baker 2016-03-22 17:06:14 UTC
deqp-vk.api_.device_init.create_instance_name_version

This test fails on bdw and skl, but only on 32 bit builds.

Standard Output

/tmp/build_root/m32/opt/deqp/modules/vulkan/deqp-vk --deqp-case=dEQP-VK.api.device_init.create_instance_name_version --deqp-log-images=disable --deqp-gl-config-name=rgba8888d24s8 --deqp-surface-width=400 --deqp-surface-height=300 --deqp-visibility=hidden --deqp-surface-type=fbo
dEQP Core git-27cae01b8cdbfc3d818efefd62ab2d7601931422 (0x27cae01b) starting..
  target implementation = 'Default'

Test case 'dEQP-VK.api.device_init.create_instance_name_version'..
Test case duration in microseconds = 895 us
  Fail (Failed, Error code: vk.createInstance(pCreateInfo, pAllocator, &object): VK_ERROR_INCOMPATIBLE_DRIVER at vkRefUtilImpl.inl:126)

DONE!

Test run totals:
  Passed:        0/1 (0.0%)
  Failed:        1/1 (100.0%)
  Not supported: 0/1 (0.0%)
  Warnings:      0/1 (0.0%)

Standard Error

/mnt/space/jenkins/jobs/Leeroy/workspace_2/repos/mesa/src/intel/vulkan/anv_device.c:414: FINISHME: Get correct values for VkPhysicalDeviceLimits
/mnt/space/jenkins/jobs/Leeroy/workspace_2/repos/mesa/src/intel/vulkan/anv_device.c:231: Client requested version 1.0.4 (VK_ERROR_INCOMPATIBLE_DRIVER)
/mnt/space/jenkins/jobs/Leeroy/workspace_2/repos/mesa/src/intel/vulkan/anv_device.c:231: Client requested version 1.0.5 (VK_ERROR_INCOMPATIBLE_DRIVER)
/mnt/space/jenkins/jobs/Leeroy/workspace_2/repos/mesa/src/intel/vulkan/anv_device.c:231: Client requested version 1.0.13 (VK_ERROR_INCOMPATIBLE_DRIVER)
/mnt/space/jenkins/jobs/Leeroy/workspace_2/repos/mesa/src/intel/vulkan/anv_device.c:231: Client requested version 1.0.4094 (VK_ERROR_INCOMPATIBLE_DRIVER)
/mnt/space/jenkins/jobs/Leeroy/workspace_2/repos/mesa/src/intel/vulkan/anv_device.c:231: Client requested version 1.0.4095 (VK_ERROR_INCOMPATIBLE_DRIVER)


pid: 12156
start time: 1458661956.3278198
end time: 1458661956.4500372


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.