src/intel/vulkan/anv_device.c
@@ -223,7 +223,7 @@ VkResult anv_CreateInstance(
    }
 
    if (VK_MAKE_VERSION(1, 0, 0) > client_version ||
-       client_version > VK_MAKE_VERSION(1, 0, 3)) {
+       client_version > VK_MAKE_VERSION(1, 0, 0xfff)) {
       return vk_errorf(VK_ERROR_INCOMPATIBLE_DRIVER,
                        "Client requested version %d.%d.%d",
                        VK_VERSION_MAJOR(client_version),
